--- a/src/main/webapp/resources/leadTools/index.html
+++ b/src/main/webapp/resources/leadTools/index.html
@@ -110,13 +110,13 @@
                                 <span class="text">Upload document...</span>
                             </button>
                         </li> -->
-                        <!-- Save/Convert document
+                        <!-- Save/Convert document -->
                         <li>
                             <button id="saveDocument" class="menuItem" title="Save/Convert document...">
                                 <span class="icon icon-sm saveIcon"></span>
                                 <span class="text">Save...</span>
                             </button>
-                        </li> -->
+                        </li>
                         <!-- Export text -->
                         <li>
                             <button id="exportText" class="menuItem">
@@ -1304,7 +1304,7 @@
                                     <p>Annotations:</p>
                                     <select id="annotationsMode" class="form-control">
                                         <option value="0">Do not export any annotations</option>
-                                        <option value="1">Export to an external file</option>
+                                        <!--option value="1">Export to an external file</option-->
                                         <option value="2">Overlay (works with Raster formats only)</option>
                                         <option value="3">Embed into the output document (works with PDF and TIF files only)</option>
                                     </select>
