--- a/src/main/webapp/resources/leadTools/index.mobile.html
+++ b/src/main/webapp/resources/leadTools/index.mobile.html
@@ -119,34 +119,34 @@
         </div>
         <div id="mainControls" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <!-- Upload document -->
+                <!-- Upload document
                 <li>
                     <button id="uploadDocument" class="mainControlsItem menuItem">
                         <span class="icon icon-md openIcon"></span>
                         <span class="text">Upload document...</span>
                     </button>
-                </li>
-                <!-- Open document from url -->
+                </li> -->
+                <!-- Open document from url
                 <li>
                     <button id="openDocumentFromUrl" class="mainControlsItem menuItem">
                         <span class="icon icon-md openUrlIcon"></span>
                         <span class="text">Open URL...</span>
                     </button>
-                </li>
-                <!-- Open from external document storage service -->
+                </li> -->
+                <!-- Open from external document storage service
                 <li>
                     <button id="openFromDocumentStorage" class="mainControlsItem menuItem">
                         <span class="icon icon-md server"></span>
                         <span class="text">Open from document storage...</span>
                     </button>
-                </li>
-                <!-- Save/Convert document
+                </li> -->
+                <!-- Save/Convert document -->
                 <li>
                     <button id="saveDocument" class="mainControlsItem menuItem">
                         <span class="icon icon-md saveIcon"></span>
                         <span class="text">Save...</span>
                     </button>
-                </li> -->
+                </li>
                 <!-- Close document -->
                 <li>
                     <button id="closeDocument" class="mainControlsItem menuItem">
@@ -648,7 +648,7 @@
                                     <p>Annotations:</p>
                                     <select id="annotationsMode" class="form-control">
                                         <option value="0">Do not export any annotations</option>
-                                        <option value="1">Export to an external file</option>
+                                        <!--option value="1">Export to an external file</option-->
                                         <option value="2">Overlay (works with Raster formats only)</option>
                                         <option value="3">Embed into the output document (works with PDF and TIF files only)</option>
                                     </select>
