updated chart color schemes and icons Files modified - [pom.xml,DashBoards.html]

--- a/src/main/webapp/pages/DashBoards/DashBoards.html
+++ b/src/main/webapp/pages/DashBoards/DashBoards.html
@@ -61,20 +61,20 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow15" padding="2em unset">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn33" padding="unset 1em">
-                        <wm-chart type="Pie" title="Submitted Form Designs" height="250px" iconclass="wi wi-pie-chart" name="chartFormTypes" dataset="bind:Variables.svFormsTypesData.dataSet" labeltype="percent" showlegend="top" xaxisdatakey="formType" yaxisdatakey="counts"
-                        theme="Orient"></wm-chart>
+                        <wm-chart type="Pie" title="Submitted Form Designs" height="250px" iconclass="wi wi-assignment" name="chartFormTypes" dataset="bind:Variables.svFormsTypesData.dataSet" labeltype="percent" showlegend="top" xaxisdatakey="formType" yaxisdatakey="counts"
+                        theme="Annabelle" offsetleft="0" offsetright="0" offsetbottom="0"></wm-chart>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn34" padding="unset 1em unset unset">
-                        <wm-chart type="Pie" title="Submitted Form Categories" height="250px" iconclass="wi wi-pie-chart" dataset="bind:Variables.svFormsCategoriesData.dataSet" labeltype="percent" showlegend="top" name="chartCategories" yaxisdatakey="counts"
-                        xaxisdatakey="category" theme="Orient"></wm-chart>
+                        <wm-chart type="Pie" title="Submitted Form Categories" height="250px" iconclass="wi wi-payment" dataset="bind:Variables.svFormsCategoriesData.dataSet" labeltype="percent" showlegend="top" name="chartCategories" yaxisdatakey="counts"
+                        xaxisdatakey="category" theme="Annabelle"></wm-chart>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow16" padding="2em unset">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn36" padding="unset 1em">
-                        <wm-chart type="Pie" title="Fee Types" height="250px" iconclass="wi wi-pie-chart" dataset="bind:Variables.svFeeByTypes.dataSet" labeltype="percent" showlegend="top" name="chartFee" xaxisdatakey="fee" yaxisdatakey="counts" theme="Orient"></wm-chart>
+                        <wm-chart type="Pie" title="Fee Types" height="250px" iconclass="wi wi-attach-money" dataset="bind:Variables.svFeeByTypes.dataSet" labeltype="percent" showlegend="top" name="chartFee" xaxisdatakey="fee" yaxisdatakey="counts" theme="Annabelle"></wm-chart>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn37" padding="unset 1em unset unset">
-                        <wm-chart type="Pie" title="Active Contractors" height="250px" iconclass="wi wi-pie-chart" name="chartVendors" dataset="bind:Variables.svFormsVendorsData.dataSet" xaxisdatakey="vendorCompany" yaxisdatakey="counts" theme="Orient"></wm-chart>
+                        <wm-chart type="Pie" title="Active Contractors" height="250px" iconclass="wi wi-work" name="chartVendors" dataset="bind:Variables.svFormsVendorsData.dataSet" xaxisdatakey="vendorCompany" yaxisdatakey="counts" theme="Annabelle"></wm-chart>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow17" padding="2em unset">
