- granted MuniAdmin access to create new form designs - removed MuniEmployee access from Inspections and CodeEnforcement dashboards, so that standard MuniEmployees (without Inspections/Code roles) will not see those dashboards Files modified - [leftnav.html,ManageForms.html]

--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -1,7 +1,7 @@
 <wm-partial data-ng-controller="leftnavPageController" name="leftnav" type="leftnav">
     <wm-nav name="DevDataEntry" type="pills" layout="stacked">
         <wm-nav-item name="list_dashboard">
-            <wm-anchor caption="My Dashboard" name="dashboardLink" iconclass="wi wi-apps" on-click="Variables.goToPage_Main.invoke()" accessroles="User,CXAdmin,MunicipalityAdmin,MunicipalityEmployee,CXVendorAdmin" badgevalue="bind:Variables.UserOpenFormsCount.dataSet.dataValue"></wm-anchor>
+            <wm-anchor caption="My Dashboard" name="dashboardLink" iconclass="wi wi-apps" on-click="Variables.goToPage_Main.invoke()" accessroles="Everyone" badgevalue="bind:Variables.UserOpenFormsCount.dataSet.dataValue"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item5">
             <wm-anchor name="anchor15" iconclass="wi wi-work" caption="My Company" on-click="Variables.goToPage_MyCompany.invoke()" accessroles="CXVendorAdmin,CXAdmin" badgevalue="bind:Variables.CompanyOpenFormsCount.dataSet.dataValue"></wm-anchor>
@@ -10,10 +10,10 @@
             <wm-anchor caption="My Municipality" name="orderLink" iconclass="wi wi-account-balance" on-click="Variables.goToPage_MyMunicipality.invoke()" accessroles="MunicipalityEmployee,CXAdmin,MunicipalityAdmin" badgevalue="bind:Variables.ProcessFormsCountForEmployee.dataSet.dataValue"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="list_order">
-            <wm-anchor caption="Code Enforcement" name="codeEnforcement" iconclass="fa fa-legal" on-click="Variables.goToPage_CodeEnforcementDashboard.invoke()" accessroles="MunicipalityEmployee,CXAdmin,MunicipalityAdmin,CodeOfficer,CodeManager"></wm-anchor>
+            <wm-anchor caption="Code Enforcement" name="codeEnforcement" iconclass="fa fa-legal" on-click="Variables.goToPage_CodeEnforcementDashboard.invoke()" accessroles="CXAdmin,MunicipalityAdmin,CodeOfficer,CodeManager"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item11">
-            <wm-anchor name="anchorInspections" iconclass="wi wi-find-in-page" caption="Inspections" accessroles="CXAdmin,Inspector,InspectorManager,MunicipalityAdmin,MunicipalityEmployee" on-click="Variables.goToPage_MunicipalityInspections.invoke()"></wm-anchor>
+            <wm-anchor name="anchorInspections" iconclass="wi wi-find-in-page" caption="Inspections" accessroles="CXAdmin,Inspector,InspectorManager,MunicipalityAdmin" on-click="Variables.goToPage_MunicipalityInspections.invoke()"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="list_inventory">
             <wm-anchor caption="Administration" name="inventoryLink" iconclass="wi wi-domain" on-click="Variables.goToPage_MunicipalityAdministration.invoke()" accessroles="MunicipalityAdmin,CXAdmin" badgevalue="bind:Variables.FormDesignsForMuniAdmin.dataSet.dataValue"></wm-anchor>
