stubbing out signing flow Files modified - [NewForm.variables.json,FormController.java,FormService.java,NewForm.js,NewForm.html]

--- a/src/main/webapp/pages/NewForm/NewForm.html
+++ b/src/main/webapp/pages/NewForm/NewForm.html
@@ -367,7 +367,7 @@
                                 <wm-gridrow name="gridrow55">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn99">
                                         <wm-label padding="unset 0.5em" name="label27" caption="This form requires a digital signature. Click the &quot;Sign Now&quot; button to sign an electronic document version of this form."></wm-label>
-                                        <wm-button class="btn-primary" caption="Sign Now" name="buttonSignNow" iconclass="wi wi-plus" on-click="Widgets.dialogSignForm.open()"></wm-button>
+                                        <wm-button class="btn-primary" caption="Sign Now" name="buttonSignNow" iconclass="wi wi-plus" on-click="buttonCreateSigningDocumentClick($event, $scope)"></wm-button>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-wizardstep>
